adding everything but demo files

--- a/src/3rdparty/Boost.NumPy/CMakeLists.txt
+++ b/src/3rdparty/Boost.NumPy/CMakeLists.txt
@@ -99,8 +99,8 @@ install(DIRECTORY boost
 
 # add submodules
 ADD_SUBDIRECTORY(libs/numpy/src)
-# ADD_SUBDIRECTORY(libs/numpy/example)
-# ADD_SUBDIRECTORY(libs/numpy/test)
+ADD_SUBDIRECTORY(libs/numpy/example)
+#ADD_SUBDIRECTORY(libs/numpy/test)
 
 if (BUILD_DOCS)
   ADD_SUBDIRECTORY(libs/numpy/doc)
